# SmileX-CMS

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  skills-lock.json
.claude/: settings.local.json
.kilo/plans/: 1775388911255-gentle-star.md  1775392691657-happy-moon.md  1775457862661-gentle-river.md  1775466306346-curious-canyon.md  1775478654860-stellar-moon.md  1775529130161-curious-sailor.md  1775533377911-stellar-comet.md  1775535031858-clever-sailor.md  1775544734773-gentle-cactus.md  (+14 more)
desktop/: .gitignore  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  tsconfig.main.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.preload.json  tsconfig.preload.tsbuildinfo  tsconfig.renderer.json  tsconfig.renderer.tsbuildinfo  vite.config.ts
desktop/src/: App.tsx  (+1 more)
server/: .dockerignore  .env.example  .gitignore  Dockerfile  create_admin.py  pyproject.toml  pyrightconfig.json
server/app/: auth.py  config.py  database.py  dependencies.py  main.py  snowid.py
server/app/models/: __init__.py  article.py  article_version.py  group.py  media.py  platform.py  publish_log.py  publish_task.py  setting.py  tag.py  user.py
server/app/plugins/: __init__.py  base.py  bilibili.py  douyin.py  registry.py  wechat_channels.py  wechat_mp.py  wechat_styles.py  xiaohongshu.py
server/app/routes/: articles.py  auth.py  groups.py  media.py  platforms.py  publish.py  settings.py  tags.py
server/app/schemas/: __init__.py  article.py  group.py  media.py  platform.py  publish.py  setting.py  tag.py  user.py
(+39 files in other folders)
